fix: align footer

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,13 @@ color: rgb(255, 215, 235);
   flex-wrap: wrap;
 }
 
+.ava {
+
+  border-radius: 200px; 
+  border: 2px solid rgb(102, 103, 171); 
+  box-shadow: 0 0 7px rgb(102, 103, 171); 
+}
+
 .section {
   width: 50%;
 }
@@ -51,6 +58,8 @@ color: rgb(255, 215, 235);
 
 .main-footer {
     background-color: rgb(102, 103, 171);
+    display: inline-block;
+    padding: 0 0 0 0;
 }
 
 .container {
@@ -114,31 +123,36 @@ color: rgb(255, 215, 235);
     border-radius: 50%;
   }
   
+  .w3c {
+    display: flex;  
+    justify-content: left;
+    padding: 16px 16px 16px 16px;
+  
+  }
+  
   .github-nav-link  {
     display: flex;
     justify-content: center;
-    align-items: normal;
+    padding: 16px 500px 16px 500px;
+  
+  
+  }
+  
+    .rssschool {
+      display: flex;
+      justify-content: right;
+      padding: 16px 16px 16px 16px;
+     
+    
+    }
 
 
-}
-
-  .rssschool {
+  
+  .footer-container {
     display: flex;
-    justify-content: right;
-    align-items: center;
-    margin: 0 auto;
-    color: #fff;
-  }
-  .w3c {
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    margin: 0;
-    color: #fff;
-  }
-  .ava {
+    justify-content: center;
+    
 
-    border-radius: 200px; 
-    border: 2px solid rgb(102, 103, 171); 
-    box-shadow: 0 0 7px rgb(102, 103, 171); 
+
   }
+ 
